--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -13,8 +13,7 @@
         <view style="width: 500rpx;height: 50rpx;">
             <input type="text" placeholder="Type here to search" bindinput="onInput" bindconfirm="onConfirm" />
         </view>
-        <view style="display: flex; justify-content:flex-end;width:120rpx;">
-            <view>
+        <view style="display: flex; justify-content:flex-end;width:120rpx;">            <view>
                 <button class="search-button" bindtap="onSearchButtonClick" hover-class="active-button" style="width: 120rpx;">搜索</button>
             </view>
         </view>
