--- a/miniprogram/pages/feedback/feedback.wxml
+++ b/miniprogram/pages/feedback/feedback.wxml
@@ -3,10 +3,29 @@
 <text>给小程序总体评分</text>
 <t-rate defaultValue="{{4}}" variant="filled" style="margin-top: 10px; left: 20px;" bind:tap="onChange"></t-rate>
 <text>给我们的建议</text>
+<view class="form-group">
+    <view class="form-cell">
+      <view class="form-cell_title">您的名字（选填）</view>
+      <input class="form-cell_input" placeholder="请输入文字" placeholder-class="form-cell_title-placeholder"
+        bindinput="onNameInput" value="{{name}}" />
+    </view>
+    <view class="form-cell">
+      <view class="form-cell_title">联系方式（选填）</view>
+      <input class="form-cell_input" placeholder="请输入手机号" placeholder-class="form-cell_title-placeholder"
+        bindinput="onPhoneNumberInput" value="{{phonenumber}}" />
+    </view>
+    <view class="form-cell">
+      <view class="form-cell_title">您的建议（必填）</view>
+      <input class="form-cell_input" placeholder="请输入文字" placeholder-class="form-cell_title-placeholder"
+        bindinput="onSuggestionInput" value="{{suggestion}}" />
+    </view>
+  </view>
+<!-- 
 <t-input label="您的名字" placeholder="可填“匿名”" bindinput="onNameInput"></t-input>
 <t-input label="联系方式" bindinput="onPhoneNumberInput" placeholder="请输入手机号(选填)" />
 <t-input label="您的建议" bindinput="onSuggestionInput" placeholder="请输入文字(必填)"></t-input>
-<button type="primary"  style="margin-top: 180px;" bind:tap="tap">提交反馈</button>
+-->
+<button type="primary"  style="margin-top: 10px;" bind:tap="tap">提交反馈</button>
 
 
 
