--- a/miniprogram/pages/edit/index.wxml
+++ b/miniprogram/pages/edit/index.wxml
@@ -33,7 +33,7 @@
             </picker>
         </view>
     </view>
-    <view class="delete" bindtap="deletebook">删除待办</view>
+    <view class="delete" bindtap="deletebook">删除库存</view>
     <view class="footer">
         <view class="cancel" bindtap="cancelEdit">取消</view>
         <view class="save" bindtap="savebook">保存</view>
